--- a/index.html
+++ b/index.html
@@ -8,125 +8,137 @@
 </head>
 <body class="bg-light">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-  <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="#">SIU-WEB</a>
-    <span class="navbar-text mx-auto h4 mb-0">SISTEMA ACADÉMICO DOCENTE</span>
-    <span class="navbar-text text-end">
-      Usuario: <span class="fw-bold">A. Cisneros</span><br>
-      <span class="badge bg-info text-dark">Profesor 2026-I</span>
-    </span>
-  </div>
-</nav>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="#">SIU-WEB</a>
+      <span class="navbar-text mx-auto h4 mb-0">SISTEMA ACADÉMICO DOCENTE</span>
+      <span class="navbar-text text-end">
+        Usuario: <strong>A. Cisneros</strong><br>
+        <span class="badge bg-info text-dark">Profesor 2026-I</span>
+      </span>
+    </div>
+  </nav>
+</header>
 
-<div class="container mb-4">
-  <div class="d-flex justify-content-end gap-2 mb-3">
-    <button type="button" class="btn btn-outline-primary"><i class="bi bi-printer"></i> Imprimir</button>
-    <button type="button" class="btn btn-outline-secondary"><i class="bi bi-download"></i> Exportar</button>
-    <button type="button" class="btn btn-danger"><i class="bi bi-arrow-clockwise"></i> Actualizar</button>
-  </div>
+<main>
+  <section class="container mb-4">
+    <div class="d-flex justify-content-end gap-2 mb-3">
+      <button type="button" class="btn btn-outline-primary" aria-label="Imprimir"><i class="bi bi-printer"></i> Imprimir</button>
+      <button type="button" class="btn btn-outline-secondary" aria-label="Exportar"><i class="bi bi-download"></i> Exportar</button>
+      <button type="button" class="btn btn-danger" aria-label="Actualizar"><i class="bi bi-arrow-clockwise"></i> Actualizar</button>
+    </div>
 
-  <div class="table-responsive">
-    <table class="table table-hover table-striped align-middle text-center">
-      <thead class="table-dark">
-        <tr>
-          <th style="width:10%">CÓDIGO</th>
-          <th style="width:30%">ASIGNATURA</th>
-          <th style="width:10%">GRUPO</th>
-          <th style="width:15%">DÍA</th>
-          <th style="width:20%">HORARIO</th>
-          <th style="width:15%">AULA</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>0413</td>
-          <td class="fw-bold text-center">PROGRAMACION WEB</td>
-          <td><span class="badge bg-primary">Gpo1</span></td>
-          <td>MARTES</td>
-          <td>10:00 - 11:40</td>
-          <td><span class="badge bg-warning text-dark">E201</span></td>
-        </tr>
-        <tr>
-          <td>0413</td>
-          <td class="fw-bold text-center">PROGRAMACION WEB</td>
-          <td><span class="badge bg-primary">Gpo1</span></td>
-          <td>JUEVES</td>
-          <td>15:00 - 16:40</td>
-          <td><span class="badge bg-warning text-dark">E201</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-success">Gpo3</span></td>
-          <td>LUNES</td>
-          <td>08:00 - 09:40</td>
-          <td><span class="badge bg-info text-dark">D104</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-success">Gpo3</span></td>
-          <td>MIERCOLES</td>
-          <td>08:00 - 09:40</td>
-          <td><span class="badge bg-info text-dark">D104</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-warning text-dark">Gpo4</span></td>
-          <td>LUNES</td>
-          <td>10:00 - 11:40</td>
-          <td><span class="badge bg-warning text-dark">E201</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-warning text-dark">Gpo4</span></td>
-          <td>JUEVES</td>
-          <td>08:00 - 09:40</td>
-          <td><span class="badge bg-warning text-dark">E201</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-info text-dark">Gpo7</span></td>
-          <td>LUNES</td>
-          <td>03:00 - 04:40</td>
-          <td><span class="badge bg-info text-dark">D104</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-info text-dark">Gpo7</span></td>
-          <td>JUEVES</td>
-          <td>01:00 - 02:40</td>
-          <td><span class="badge bg-info text-dark">D104</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-danger">Gpo8</span></td>
-          <td>MARTES</td>
-          <td>03:00 - 04:40</td>
-          <td><span class="badge bg-info text-dark">D104</span></td>
-        </tr>
-        <tr>
-          <td>0402</td>
-          <td>INTRO. INGENIERIA</td>
-          <td><span class="badge bg-danger">Gpo8</span></td>
-          <td>MIERCOLES</td>
-          <td>01:00 - 02:40</td>
-          <td><span class="badge bg-info text-dark">D104</span></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+    <div class="table-responsive">
+      <table class="table table-hover table-striped align-middle text-center" aria-describedby="horario-caption">
+        <caption id="horario-caption" class="text-center">Horario Formato Tabular</caption>
+        <thead class="table-dark">
+          <tr>
+            <th scope="col" style="width:10%">CÓDIGO</th>
+            <th scope="col" style="width:30%">ASIGNATURA</th>
+            <th scope="col" style="width:10%">GRUPO</th>
+            <th scope="col" style="width:15%">DÍA</th>
+            <th scope="col" style="width:20%">HORARIO</th>
+            <th scope="col" style="width:15%">AULA</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>0413</td>
+            <td class="fw-bold">PROGRAMACION WEB</td>
+            <td><span class="badge bg-primary">Gpo1</span></td>
+            <td>MARTES</td>
+            <td>10:00 - 11:40</td>
+            <td><span class="badge bg-warning text-dark">E201</span></td>
+          </tr>
+          <tr>
+            <td>0413</td>
+            <td class="fw-bold">PROGRAMACION WEB</td>
+            <td><span class="badge bg-primary">Gpo1</span></td>
+            <td>JUEVES</td>
+            <td>15:00 - 16:40</td>
+            <td><span class="badge bg-warning text-dark">E201</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-success">Gpo3</span></td>
+            <td>LUNES</td>
+            <td>08:00 - 09:40</td>
+            <td><span class="badge bg-info text-dark">D104</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-success">Gpo3</span></td>
+            <td>MIERCOLES</td>
+            <td>08:00 - 09:40</td>
+            <td><span class="badge bg-info text-dark">D104</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-warning text-dark">Gpo4</span></td>
+            <td>LUNES</td>
+            <td>10:00 - 11:40</td>
+            <td><span class="badge bg-warning text-dark">E201</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-warning text-dark">Gpo4</span></td>
+            <td>JUEVES</td>
+            <td>08:00 - 09:40</td>
+            <td><span class="badge bg-warning text-dark">E201</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-info text-dark">Gpo7</span></td>
+            <td>LUNES</td>
+            <td>03:00 - 04:40</td>
+            <td><span class="badge bg-info text-dark">D104</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-info text-dark">Gpo7</span></td>
+            <td>JUEVES</td>
+            <td>01:00 - 02:40</td>
+            <td><span class="badge bg-info text-dark">D104</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-danger">Gpo8</span></td>
+            <td>MARTES</td>
+            <td>03:00 - 04:40</td>
+            <td><span class="badge bg-info text-dark">D104</span></td>
+          </tr>
+          <tr>
+            <td>0402</td>
+            <td>INTRO. INGENIERIA</td>
+            <td><span class="badge bg-danger">Gpo8</span></td>
+            <td>MIERCOLES</td>
+            <td>01:00 - 02:40</td>
+            <td><span class="badge bg-info text-dark">D104</span></td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="6" class="text-center">
+              <small class="text-muted">Última actualización: Febrero 2026</small>
+            </td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+  </section>
+</main>
 
 <footer class="bg-dark text-white text-center py-3 mt-4">
   <div class="container">
-    <p class="mb-0"><small>Sistema de Gestión Académica - Derechos Reservados 1999-2026</small></p>
+    <address class="mb-0"><small>Sistema de Gestión Académica - Derechos Reservados 1999-2026</small></address>
   </div>
 </footer>
 
