--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>SIU - Sistema de Inscripcion Universitaria v1.0</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-light">
+<body class="bg-light d-flex flex-column min-vh-100">
 
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
@@ -21,7 +21,7 @@
   </nav>
 </header>
 
-<main>
+<main class="flex-grow-1">
   <section class="container mb-4">
     <div class="d-flex justify-content-end gap-2 mb-3">
       <button type="button" class="btn btn-outline-primary" aria-label="Imprimir"><i class="bi bi-printer"></i> Imprimir</button>
@@ -130,7 +130,7 @@
   </section>
 </main>
 
-<footer class="bg-dark text-white text-center py-3 mt-4">
+<footer class="bg-dark text-white text-center py-3 mt-auto">
   <div class="container">
     <address class="mb-0"><small>Sistema de Gestión Académica - Derechos Reservados 1999-2026</small></address>
   </div>
