--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 <main class="flex-grow-1">
   <section class="container mb-4">
     <div class="d-flex justify-content-end gap-2 mb-3">
+      <button type="button" class="btn btn-outline-success" aria-label="Cambiar a formato Calendario" id="calendar"><i class="bi bi-calendar"></i> Cambiar a formato de Calendario</button>
       <button type="button" class="btn btn-outline-primary" aria-label="Imprimir"><i class="bi bi-printer"></i> Imprimir</button>
       <button type="button" class="btn btn-outline-secondary" aria-label="Exportar"><i class="bi bi-download"></i> Exportar</button>
       <button type="button" class="btn btn-danger" aria-label="Actualizar"><i class="bi bi-arrow-clockwise"></i> Actualizar</button>
     </div>
 
-    <div class="table-responsive">
+    <div class="table-responsive" id="content-container">
       <table class="table table-hover table-striped align-middle text-center" aria-describedby="horario-caption">
         <caption id="horario-caption" class="text-center">Horario Formato Tabular</caption>
         <thead class="table-dark">
@@ -139,5 +140,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Iconos Bootstrap -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+<script src="calendar_format.js"></script>
 </body>
 </html>
