feat(js): dynamic content in js

--- a/index.html
+++ b/index.html
@@ -31,102 +31,7 @@
     </div>
 
     <div class="table-responsive" id="content-container">
-      <table class="table table-hover table-striped align-middle text-center" aria-describedby="horario-caption">
-        <caption id="horario-caption" class="text-center">Horario Formato Tabular</caption>
-        <thead class="table-dark">
-          <tr>
-            <th scope="col" style="width:10%">CÓDIGO</th>
-            <th scope="col" style="width:30%">ASIGNATURA</th>
-            <th scope="col" style="width:10%">GRUPO</th>
-            <th scope="col" style="width:15%">DÍA</th>
-            <th scope="col" style="width:20%">HORARIO</th>
-            <th scope="col" style="width:15%">AULA</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>0413</td>
-            <td class="fw-bold">PROGRAMACION WEB</td>
-            <td><span class="badge bg-primary">Gpo1</span></td>
-            <td>MARTES</td>
-            <td>10:00 - 11:40</td>
-            <td><span class="badge bg-warning text-dark">E201</span></td>
-          </tr>
-          <tr>
-            <td>0413</td>
-            <td class="fw-bold">PROGRAMACION WEB</td>
-            <td><span class="badge bg-primary">Gpo1</span></td>
-            <td>JUEVES</td>
-            <td>15:00 - 16:40</td>
-            <td><span class="badge bg-warning text-dark">E201</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-success">Gpo3</span></td>
-            <td>LUNES</td>
-            <td>08:00 - 09:40</td>
-            <td><span class="badge bg-info text-dark">D104</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-success">Gpo3</span></td>
-            <td>MIERCOLES</td>
-            <td>08:00 - 09:40</td>
-            <td><span class="badge bg-info text-dark">D104</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-warning text-dark">Gpo4</span></td>
-            <td>LUNES</td>
-            <td>10:00 - 11:40</td>
-            <td><span class="badge bg-warning text-dark">E201</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-warning text-dark">Gpo4</span></td>
-            <td>JUEVES</td>
-            <td>08:00 - 09:40</td>
-            <td><span class="badge bg-warning text-dark">E201</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-info text-dark">Gpo7</span></td>
-            <td>LUNES</td>
-            <td>03:00 - 04:40</td>
-            <td><span class="badge bg-info text-dark">D104</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-info text-dark">Gpo7</span></td>
-            <td>JUEVES</td>
-            <td>01:00 - 02:40</td>
-            <td><span class="badge bg-info text-dark">D104</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-danger">Gpo8</span></td>
-            <td>MARTES</td>
-            <td>03:00 - 04:40</td>
-            <td><span class="badge bg-info text-dark">D104</span></td>
-          </tr>
-          <tr>
-            <td>0402</td>
-            <td>INTRO. INGENIERIA</td>
-            <td><span class="badge bg-danger">Gpo8</span></td>
-            <td>MIERCOLES</td>
-            <td>01:00 - 02:40</td>
-            <td><span class="badge bg-info text-dark">D104</span></td>
-          </tr>
-        </tbody>
-        <tfoot>
-      </table>
+      <!-- Aquí cae la tabla o el calendario blamblam-->
     </div>
   </section>
 </main>
@@ -140,6 +45,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Iconos Bootstrap -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-<script src="calendar_format.js"></script>
+<script type="module" src="./js/main.js"></script>
 </body>
 </html>
