feat(js): first functional calendar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
     <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="#">SIU-WEB</a>
+      <a class="navbar-brand fw-bold" href="#"><i class="bi bi-mortarboard me-2"></i>SIU-WEB</a>
       <span class="navbar-text mx-auto h4 mb-0">SISTEMA ACADÉMICO DOCENTE</span>
       <span class="navbar-text text-end">
         Usuario: <strong>A. Cisneros</strong><br>
